# modern-data-stack

./: .gitignore  README.md
apps/airbyte/: Chart.yaml  values.yaml
apps/dagster/: Chart.yaml  values.yaml
apps/external-secrets-store/: cluster-secrets-store.yaml
apps/metabase/: Chart.yaml  (+1 more)
architecture/: README.md  nl-query-architecture.md  sensitive-data-access.md
argocd/: airbyte-app.yaml  argocd-apps.yaml  external-secrets-store-app.yaml  metabase-app.yaml  mlflow-app.yaml  nl-query-agent-app.yaml  spark-app.yaml  zen-ml-app.yaml
dbt/: .dockerignore  .user.yml  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
discover-dagster/: Dockerfile  README.md  pyproject.toml
discover-dagster/src/discover_dagster/defs/sales/: assets.py  jobs.py
infra/: airbyte.tf  alb.tf  argocd.tf  aurora.tf  autoscaling_kube.tf  dagster.tf  datalake.tf  ecr.tf  external-dns.tf  kube.tf  local.tf  main.tf  metabase.tf  mlflow.tf  nl-query-agent.tf  provider.tf  spark.tf  spark_generator_data.tf  tracking-data-access.tf  zen-ml.tf
orchestration-dagster/: Dockerfile  README.md  pyproject.toml
orchestration-dagster/.dg/: telemetry.yaml
orchestration-dagster/src/discover_dagster/defs/sales/: schedules.py
orchestration-dagster/src/orchestration_dagster/: definitions.py
orchestration-dagster/src/orchestration_dagster/defs/polars/: assets.py  jobs.py  schedules.py
orchestration-dagster/src/orchestration_dagster/defs/spark/: assets.py  jobs.py  schedules.py
orchestration-dagster/src/spark/: k8s.py
spark-vs-polars/: Dockerfile  polars.Dockerfile  pyproject.toml  spark.Dockerfile  test_spark.yaml
spark-vs-polars/src/generte_data/: nested_data_main.py  plain_data_main.py
spark-vs-polars/src/spark_vs_polars/: config.py  main.py  polars_main.py  spark_main.py
spark-vs-polars/src/spark_vs_polars/nested/: polars_main.py  spark_main.py
spark-vs-polars/src/spark_vs_polars/plain/: polars_main.py  spark_main.py
spark-vs-polars/src/spark_vs_polars/plain/broadcast_join/: polars_main.py  spark_main.py
spark-vs-polars/src/spark_vs_polars/plain/groupby/: polars_main.py  spark_main.py
spark-vs-polars/src/spark_vs_polars/plain/join/: polars_main.py  spark_main.py
spark-vs-polars/tests/spark_vs_polars/: conftest.py  test_main.py  test_spark_main.py
spark-vs-polars/tests/spark_vs_polars/nested/: test_polars_main.py
(+67 files in other folders)
