[project]
name = "orchestration_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster-postgres>=0.28.17",
    "dagster==1.12.17",
    "kubernetes>=35.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
packages = ["src/orchestration_dagster", "src/spark"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration_dagster"
registry_modules = [
    "orchestration_dagster.components.*",
]
