[project]
name = "spark-vs-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.39.3",
    "pyspark>=4.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "orjson>=3.11.7",
    "tqdm>=4.67.3",
    "faker>=40.11.0",
    "setuptools>=82.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
packages = ["src/spark_vs_polars"]
